# SAME-Repo

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: default.yml
code/: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.py
code/docs/: Makefile  conf.py  index.rst  make.bat
code/notebooks/: 00_first_function.ipynb  00_second_function.ipynb  100_default_notebook.ipynb  Makefile  settings.ini
code/notebooks/docs/: _config.yml
code/notebooks/docs/_data/: topnav.yml
code/src/generated_code/: execute_all_files.sh
